--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^3.1.5
   firebase_core: ^1.10.6
   firebase_auth: ^3.3.4
+  image_picker: ^0.8.4+4
   
 
 dev_dependencies:
